--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
+    "canvas": "^3.1.0",
     "next": "15.1.7",
+    "pdfjs-dist": "^2.10.377",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
