--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-saas",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "canvas": "^3.1.0",
     "next": "^15.1.7",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^2.10.377",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8"
