--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "canvas": "^3.1.0",
+    "firebase": "^11.4.0",
     "next": "^15.1.7",
     "pdfjs-dist": "^2.10.377",
     "react": "^19.0.0",
